fix nav z-index and update build

--- a/packages/villain-web/src/css/index.css
+++ b/packages/villain-web/src/css/index.css
@@ -95,6 +95,7 @@ nav {
   right: 0;
   top: 0;
   background: #fff;
+  z-index: 1;
 }
 
 nav ul {
